<?xml version="1.0"?>
<package>
  <name>schunk_control</name>
  <version>0.0.0</version>
  <description>The schunk_control package</description>

  <maintainer email="bmindermann@iat.uni-bremen.de">Bjoern Mindermann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>schunk_libm5api</build_depend>
  <build_depend>libntcan</build_depend>
  <build_depend>libpcan</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>schunk_libm5api</run_depend>
  <run_depend>libntcan</run_depend>
  <run_depend>libpcan</run_depend>
  <run_depend>cob_srvs</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>cob_trajectory_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>ipa_canopen_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>joint_trajectory_action</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>pr2_dashboard_aggregator</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>pr2_mechanism_diagnostics</run_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  
  <export>
	<cpp cflags="-I${prefix}/common/include"/>
  </export>
</package>
